--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -2,7 +2,7 @@ name: app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -31,8 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   meta: ^1.8.0
-  barcode: ^2.2.4  # For generating barcode data
-  barcode_widget: ^2.0.4  # For displaying barcodes
+  barcode: ^2.2.4 # For generating barcode data
+  barcode_widget: ^2.0.4 # For displaying barcodes
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -44,13 +44,12 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   shared_preferences: ^2.3.3
   http: ^1.2.2
-  file_picker: ^6.1.1
+  file_picker: ^8.1.4
   injectable: ^2.5.0
-  firebase_core: ^2.24.2
-  cloud_firestore: ^4.13.6
-  firebase_storage: ^11.6.0
-  csv: ^5.0.2
-  uuid: ^4.3.3  # For generating unique identifiers
+  firebase_core: ^3.8.0
+  cloud_firestore: ^5.5.0
+  csv: ^6.0.0
+  uuid: ^4.3.3 # For generating unique identifiers
   path_provider: ^2.1.1
 
 dev_dependencies:
@@ -59,9 +58,8 @@ dev_dependencies:
   bloc_test: ^9.1.7
   mocktail: ^1.0.3
   mockito: ^5.4.4
-  fake_cloud_firestore: ^2.4.0
-  firebase_storage_mocks: ^0.6.1
-  flutter_lints: ^4.0.0
+  fake_cloud_firestore: ^3.1.0
+  flutter_lints: ^5.0.0
   build_runner: ^2.4.7
 
 # For information on the generic Dart part of this file, see the
@@ -69,7 +67,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
